# xposed-module22

./: MODMENU_INTEGRATION.md  README.md  build.gradle  build_apk.bat  debug_module.bat  setup_environment.bat  test_module.bat
.github/workflows/: main.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  Hooks.h  JNI_Bridge.cpp  ModMenu.cpp  ModMenu.h
app/src/main/java/com/example/xposedmodule/: FloatingViewTouchListener.java  MainActivity.java  MainHook.java  ModMenuService.java  NativeLib.java
app/src/main/res/drawable/: floating_menu_background.xml  test_button_background.xml
app/src/main/res/layout/: activity_main.xml  floating_mod_menu.xml
app/src/main/res/values/: strings.xml
